<resources>
    <string name="app_name">KotlinRecyclerviews</string>
    <string name="recycleView_one">文本lists</string>
    <string name="recycleView_two">图片lists</string>
    <string name="recycleView_three">文本加图片组合lists</string>
    <string name="recycleView_four">简单瀑布流</string>
    <string name="recycleView_five">横向滑动</string>
    <string name="recycleView_six">recycleView+系统上拉下拉刷新</string>
    <string name="recycleView_seven">recycleView+pulltorefresh.library控件上拉下拉刷新</string>
    <string name="recycleView_eight">recycleView+自定义上下拉刷新</string>


    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>

    <string name="pull_to_refresh_pull_label" translatable="false">下拉刷新</string>
    <string name="pull_to_refresh_release_label" translatable="false">松开可以刷新</string>
    <string name="pull_to_refresh_pull_up_label" translatable="false">上拉加载更多</string>
    <string name="pull_to_refresh_release_up_label" translatable="false">松开可以加载</string>
    <string name="pull_to_refresh_refreshing_label" translatable="false">加载中&#8230;</string>
    <string name="pull_to_refresh_tap_label" translatable="false">点击刷新</string>
</resources>
